--- a/cppAlgorithm/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm/cppAlgorithm.vcxproj.filters
@@ -357,5 +357,8 @@
     <ClCompile Include="DataStructure16_2017110060 강수연.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Heap_Ashe.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
