--- a/cppAlgorithm/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm/cppAlgorithm.vcxproj.filters
@@ -366,5 +366,8 @@
     <ClCompile Include="Q92342.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Leet_wiggle-sort-ii.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
